# static_frontend_package

./: Cargo.toml  Dockerfile  LICENSE  README.md  group  passwd
.cargo/: config  config.toml
.github/workflows/: build.yml
docker/: Dockerfile
src/: log.rs  main.rs  web_service.rs
